--- a/app/components/contact-form/contact-form.html
+++ b/app/components/contact-form/contact-form.html
@@ -1,4 +1,12 @@
-<div class="contact">
+<div class="contact" id="contact">
+    <div class="section-container">
+        <div class="section-about-top-block">
+            <div class="section-title-block">
+                <div class="section-number-line">05</div>
+                <div class="section-title-name">Contact</div>
+            </div>
+        </div>
+    </div>
     <div class="contact-form-wrap">
         <div class="contact-form-desription">
             <div class="contact-form-title">We’d like to hear from you</div>
@@ -15,7 +23,7 @@
         </div>
     </div>
     <div class="contact-logo-block">
-        <img src="/img/logo-black.png" alt="">
+        <img src="img/logo-black.png" alt="">
     </div>
     <div class="contact-information-block">
         <p>+86 185 2150 5122</p>
