--- a/app/components/menu/menu.html
+++ b/app/components/menu/menu.html
@@ -1,14 +1,15 @@
 <div class="menu-wrap">
-    <!--<div class="menu-logo-block">-->
-        <!--<img src="/img/logo-black.png" alt="">-->
-    <!--</div>-->
+    <div class="menu-logo-block">
+        <img src="img/logo-black.png" alt="">
+    </div>
     <div class="menu-block">
         <ul class="menu-list">
-            <li class="active"><a href="#" class="menu-item"><span>01</span> HOME</a></li>
-            <li><a href="#" class="menu-item"><span>02</span> ABOUT US</a></li>
-            <li><a href="#" class="menu-item"><span>03</span> SERVICE</a></li>
-            <li><a href="#" class="menu-item"><span>04</span> partners</a></li>
-            <li><a href="#" class="menu-item"><span>05</span> CONTACT</a></li>
+            <li class="active"><a href="index.html" class="menu-item"><span>01</span> HOME</a></li>
+            <li><a href="about.html" class="menu-item"><span>02</span> ABOUT US</a></li>
+            <li><a href="service.html" class="menu-item"><span>03</span> SERVICE</a></li>
+            <li><a href="partners.html" class="menu-item"><span>04</span> partners</a></li>
+            <li><a href="#contact" class="menu-item"><span>05</span> CONTACT</a></li>
         </ul>
+        <a href="#" class="menu-mobile-button"><img src="img/menu-button.png" alt=""></a>
     </div>
 </div>
